# argus-magick-tool

./: .gitmodules  App.cpp  App.h  CMakeLists.txt  README.md  main.cpp
Lib/argus-lib/: CMakeLists.txt  Command.cpp  Command.h  CommandParser.cpp  CommandParser.h  CommandProcessor.cpp  CommandProcessor.h  Commands.cpp  Commands.h  CommonTypes.h
